--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
 <script src="js/libs/jquery-1.7.2.min.js"></script>
 <script src="js/libs/swfobject.js"></script>
 
-<script src="js/plugins.js"></script>
-<script src="js/script.js"></script>
+<script src="js/libs/logging.js"></script>
+<script src="js/main.js"></script>
 
 
 <!-- Start of Google Analytics -->
