--- a/index.html
+++ b/index.html
@@ -54,33 +54,22 @@
 <script src="js/main.js"></script>
 
 
-<!-- Start of Google Analytics -->
+
 <script>
-window._gaq = [['_setAccount','UA-3898076-10'],['_trackPageview'],['_trackPageLoadTime']];
+    /* Google Analytics */
+    window._gaq = [['_setAccount','UA-3898076-10'],['_trackPageview'],['_trackPageLoadTime']];
+    Modernizr.load({
+      load: ('https:' == location.protocol ? 'http://ssl' : 'http://www') + '.google-analytics.com/ga.js'
+    });
 
-Modernizr.load({
-  load: ('https:' == location.protocol ? 'http://ssl' : 'http://www') + '.google-analytics.com/ga.js'
-});
+    /* StatCounter */
+    window.sc_project=6215406;
+    window.sc_invisible=1;
+    window.sc_security="cf3bc309";
+    Modernizr.load({
+        load: 'http://www.statcounter.com/counter/counter_xhtml.js'
+    });
 </script>
-<!-- End of Google Analytics -->
-
-
-<!-- Start of StatCounter -->
-<script type="text/javascript">
-var sc_project=6215406;
-var sc_invisible=1;
-var sc_security="cf3bc309";
-</script>
-
-<script type="text/javascript"
-src="http://www.statcounter.com/counter/counter_xhtml.js"></script><noscript><div
-class="statcounter"><a title="web statistics"
-class="statcounter"
-href="http://statcounter.com/free_web_stats.html"><img
-class="statcounter"
-src="http://c.statcounter.com/6215406/0/cf3bc309/1/"
-alt="web statistics" /></a></div></noscript>
-<!-- End of StatCounter -->
 
   <!--[if lt IE 7 ]>
     <script src="//ajax.googleapis.com/ajax/libs/chrome-frame/1.0.3/CFInstall.min.js"></script>
