--- a/static/index.html
+++ b/static/index.html
@@ -39,9 +39,9 @@
 
 	<link href="/favicon.ico" rel="icon" type="image/x-icon" />
     <link href='http://fonts.googleapis.com/css?family=Reenie+Beanie|Josefin+Sans+Std+Light' rel='stylesheet' type='text/css' />
-    <link rel="stylesheet" type="text/css" href="/style_min.css" />
+    <link rel="stylesheet" type="text/css" href="style.css" />
     <script src="http://www.google.com/jsapi?key=ABQIAAAANiTe_niYMpLXI3UDeUzpMRSVMlTdmhaYd1yaX4iiQjGBtAzFhxS96_Ey_JaUcWxxFqT4QZQh3TV1jQ" type="text/javascript"></script>
-    <script src="/instant_min.js" type="text/javascript"></script>
+    <script src="instant.js" type="text/javascript"></script>
 
     <script type="text/javascript" src="http://delicious-button.googlecode.com/files/jquery.delicious-button-1.0.min.js"></script>
     <script type="text/javascript">
