use latest youtube api

--- a/static/index.html
+++ b/static/index.html
@@ -40,8 +40,6 @@
 	<link href="/favicon.ico" rel="icon" type="image/x-icon" />
     <link href='http://fonts.googleapis.com/css?family=Reenie+Beanie|Josefin+Sans+Std+Light' rel='stylesheet' type='text/css' />
     <link rel="stylesheet" type="text/css" href="style.css" />
-    <script src="http://www.google.com/jsapi?key=ABQIAAAANiTe_niYMpLXI3UDeUzpMRSVMlTdmhaYd1yaX4iiQjGBtAzFhxS96_Ey_JaUcWxxFqT4QZQh3TV1jQ" type="text/javascript"></script>
-    <script src="instant.js" type="text/javascript"></script>
 
     <script type="text/javascript" src="http://delicious-button.googlecode.com/files/jquery.delicious-button-1.0.min.js"></script>
     <script type="text/javascript">
@@ -228,5 +226,10 @@ class="statcounter"
 src="http://c.statcounter.com/6215406/0/cf3bc309/1/"
 alt="web statistics" /></a></div></noscript>
 <!-- End of StatCounter Code -->
+
+<script src="jquery-1.11.2.min.js"></script>
+<script src="instant.js"></script>
+<script src="https://apis.google.com/js/client.js?onload=gapiInit"></script>
+
 </body>
 </html>
