--- a/static/index.html
+++ b/static/index.html
@@ -4,7 +4,7 @@
     <!--
 
     YouTube Instant
-    http://ytinstant.com
+    https://ytinstant.com
 
     Author     Feross Aboukhadijeh
     Website    http://www.feross.org
@@ -31,8 +31,8 @@
 
     <meta property="og:title" content="YouTube Instant"/>
     <meta property="og:type" content="website"/>
-    <meta property="og:image" content="http://ytinstant.com/images/og_logo.png"/>
-    <meta property="og:url" content="http://ytinstant.com/"/>
+    <meta property="og:image" content="https://ytinstant.com/images/og_logo.png"/>
+    <meta property="og:url" content="https://ytinstant.com/"/>
     <meta property="og:site_name" content="YouTube Instant"/>
     <meta property="fb:admins" content="1347524341"/>
     <meta property="og:description" content="Real-time YouTube video surfing."/>
@@ -61,7 +61,7 @@
     <div id="wrapper">
         <div id="header" class="clearfix">
                 <div id="logo">
-                    <a href="http://ytinstant.com"><span>YouTube Instant</span></a>
+                    <a href="https://ytinstant.com"><span>YouTube Instant</span></a>
                 </div>
             <input id="searchBox" value="" spellcheck="false"></input>
             <span id="searchTermKeyword"><strong>Search YouTube Instantly</strong></span>
@@ -109,18 +109,18 @@
                         <iframe src="http://www.facebook.com/plugins/like.php?href=http%3A%2F%2Fytinstant.com&amp;layout=button_count&amp;show_faces=false&amp;width=90&amp;action=like&amp;colorscheme=light&amp;height=21" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:90px; height:21px;" allowTransparency="true"></iframe>
                     </div>
                     <div id="stumbleButton">
-                        <script src="http://www.stumbleupon.com/hostedbadge.php?s=1&amp;r=http://ytinstant.com"></script>
+                        <script src="http://www.stumbleupon.com/hostedbadge.php?s=1&amp;r=https://ytinstant.com"></script>
                     </div>
                 </div>
                 <div id="share2">
                     <div id="tweetButton">
-                        <a href="http://twitter.com/share" class="twitter-share-button" data-count="horizontal" data-via="FreeTheFeross" data-url="http://ytinstant.com">Tweet</a><script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>
+                        <a href="http://twitter.com/share" class="twitter-share-button" data-count="horizontal" data-via="FreeTheFeross" data-url="https://ytinstant.com">Tweet</a><script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>
                     </div>
                     <div id="deliciousButton">
                         <div style='float:right; margin-right:10px;'>
                         <a class="delicious-button"  href="http://delicious.com/save">
                            <!-- {
-                           url:"http://ytinstant.com/"
+                           url:"https://ytinstant.com/"
                            ,title:"YouTube Instant - Real-time YouTube video surfing."
                            ,button:"wide"
                            } -->
@@ -131,7 +131,7 @@
                 </div>
                 <div id="share3">
                     <div id="buzzButton">
-                        <a title="Post to Google Buzz" class="google-buzz-button" href="http://www.google.com/buzz/post" data-button-style="small-count" data-url="http://ytinstant.com" data-imageurl="http://ytinstant.com/images/logo.png"></a>
+                        <a title="Post to Google Buzz" class="google-buzz-button" href="http://www.google.com/buzz/post" data-button-style="small-count" data-url="https://ytinstant.com" data-imageurl="https://ytinstant.com/images/logo.png"></a>
                         <script type="text/javascript" src="http://www.google.com/buzz/api/button.js"></script>
                     </div>
                     <div id="addthisButton">
