--- a/unfinished-coffeescript-port/index.html
+++ b/unfinished-coffeescript-port/index.html
@@ -13,8 +13,8 @@
 
     <meta property="og:title" content="YouTube Instant"/>
     <meta property="og:type" content="website"/>
-    <meta property="og:image" content="http://ytinstant.com/img/og_logo.png"/>
-    <meta property="og:url" content="http://ytinstant.com/"/>
+    <meta property="og:image" content="https://ytinstant.com/img/og_logo.png"/>
+    <meta property="og:url" content="https://ytinstant.com/"/>
     <meta property="og:site_name" content="YouTube Instant"/>
     <meta property="fb:admins" content="1347524341"/>
     <meta property="og:description" content="Real-time YouTube video surfing."/>
