update statcounter for ssl

--- a/static/index.html
+++ b/static/index.html
@@ -210,22 +210,23 @@ qacct:"p-69FZJwoXOxhpY"
 </noscript>
 <!-- End Quantcast tag -->
 
-<!-- Start of StatCounter Code -->
+<!-- Start of StatCounter Code for Default Guide -->
 <script type="text/javascript">
 var sc_project=6215406;
 var sc_invisible=1;
 var sc_security="cf3bc309";
+var sc_https=1;
+var sc_remove_link=1;
+var scJsHost = (("https:" == document.location.protocol) ?
+"https://secure." : "http://www.");
+document.write("<sc"+"ript type='text/javascript' src='" +
+scJsHost+
+"statcounter.com/counter/counter.js'></"+"script>");
 </script>
-
-<script type="text/javascript"
-src="http://www.statcounter.com/counter/counter_xhtml.js"></script><noscript><div
-class="statcounter"><a title="web statistics"
-class="statcounter"
-href="http://statcounter.com/free_web_stats.html"><img
-class="statcounter"
-src="http://c.statcounter.com/6215406/0/cf3bc309/1/"
-alt="web statistics" /></a></div></noscript>
-<!-- End of StatCounter Code -->
+<noscript><div class="statcounter"><img class="statcounter"
+src="//c.statcounter.com/6215406/0/cf3bc309/1/" alt="Web
+Analytics"></div></noscript>
+<!-- End of StatCounter Code for Default Guide -->
 
 <script src="jquery-1.11.2.min.js"></script>
 <script src="instant.js"></script>
