more https fixes

--- a/static/index.html
+++ b/static/index.html
@@ -7,7 +7,7 @@
     https://ytinstant.com
 
     Author     Feross Aboukhadijeh
-    Website    http://www.feross.org
+    Website    https://www.feross.org
     Copyright  2010. Feross Aboukhadijeh.
 
     Data is not information.
@@ -38,10 +38,10 @@
     <meta property="og:description" content="Real-time YouTube video surfing."/>
 
 	<link href="/favicon.ico" rel="icon" type="image/x-icon" />
-    <link href='http://fonts.googleapis.com/css?family=Reenie+Beanie|Josefin+Sans+Std+Light' rel='stylesheet' type='text/css' />
+    <link href='https://fonts.googleapis.com/css?family=Reenie+Beanie|Josefin+Sans+Std+Light' rel='stylesheet' type='text/css' />
     <link rel="stylesheet" type="text/css" href="style.css" />
 
-    <script type="text/javascript" src="http://delicious-button.googlecode.com/files/jquery.delicious-button-1.0.min.js"></script>
+    <script type="text/javascript" src="https://delicious-button.googlecode.com/files/jquery.delicious-button-1.0.min.js"></script>
     <script type="text/javascript">
 
       var _gaq = _gaq || [];
@@ -103,43 +103,6 @@
             <div id="socialButtons" class="footerBox">
                 <div class="boxHeader">
                     Make It Viral
-                </div>
-                <div id="share1">
-                    <div id="likeButton">
-                        <iframe src="http://www.facebook.com/plugins/like.php?href=http%3A%2F%2Fytinstant.com&amp;layout=button_count&amp;show_faces=false&amp;width=90&amp;action=like&amp;colorscheme=light&amp;height=21" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:90px; height:21px;" allowTransparency="true"></iframe>
-                    </div>
-                    <div id="stumbleButton">
-                        <script src="http://www.stumbleupon.com/hostedbadge.php?s=1&amp;r=https://ytinstant.com"></script>
-                    </div>
-                </div>
-                <div id="share2">
-                    <div id="tweetButton">
-                        <a href="http://twitter.com/share" class="twitter-share-button" data-count="horizontal" data-via="FreeTheFeross" data-url="https://ytinstant.com">Tweet</a><script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>
-                    </div>
-                    <div id="deliciousButton">
-                        <div style='float:right; margin-right:10px;'>
-                        <a class="delicious-button"  href="http://delicious.com/save">
-                           <!-- {
-                           url:"https://ytinstant.com/"
-                           ,title:"YouTube Instant - Real-time YouTube video surfing."
-                           ,button:"wide"
-                           } -->
-                           Save on Delicious
-                        </a>
-                        </div>
-                    </div>
-                </div>
-                <div id="share3">
-                    <div id="buzzButton">
-                        <a title="Post to Google Buzz" class="google-buzz-button" href="http://www.google.com/buzz/post" data-button-style="small-count" data-url="https://ytinstant.com" data-imageurl="https://ytinstant.com/images/logo.png"></a>
-                        <script type="text/javascript" src="http://www.google.com/buzz/api/button.js"></script>
-                    </div>
-                    <div id="addthisButton">
-                        <div class="addthis_toolbox addthis_default_style">
-                        <a href="http://www.addthis.com/bookmark.php?v=250&amp;username=xa-4c99aba8164be257" class="addthis_button_compact">Share</a>
-                        </div>
-                        <script type="text/javascript" src="http://s7.addthis.com/js/250/addthis_widget.js#username=xa-4c99aba8164be257"></script>
-                    </div>
                 </div>
             </div>
             <div id="credit" class="footerBox">
